# CopilotSendMassege

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/ai-worker/: .eslintrc.cjs  Dockerfile  package.json
apps/ai-worker/src/: index.ts
apps/api/: .eslintrc.cjs  Dockerfile  README.md  package.json  tsconfig.json
apps/api/src/: app.ts  index.ts  test-runner.ts
apps/commenting-worker/: Dockerfile  package.json
apps/commenting-worker/src/: index.ts  (+1 more)
apps/leadradar-worker/: .eslintrc.cjs  Dockerfile  package.json  tsconfig.json
apps/telegram-auth-bot/: .eslintrc.cjs  Dockerfile  package.json
apps/telegram-worker/: Dockerfile  README.md  main.py  pyproject.toml
apps/telegram-worker/app/: api.py  auth.py  config.py  crypto.py  db.py  internal_api_client.py  schemas.py  telegram_client.py
apps/telegram-worker/app/services/: auth_flow.py  discussion_join.py  join_service.py  live_listener.py  profile_service.py  safety.py  sync_service.py
apps/telegram-worker/telegram_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/telegram-worker/tests/: test_discussion_join.py  test_safety_new_conversation.py
apps/web/: .eslintrc.cjs  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
deploy/nginx/: entrypoint.sh  nginx.conf
deploy/redis/: redis.conf
deploy/systemd/: ai-sales-assistant.service
docs/: DEPLOY-CONFIG.md  ENV-GUIDE.md  trial-manual-qa.md
scripts/: backup-postgres.sh
(+354 files in other folders)
