[project]
name = "telegram-worker"
version = "0.1.0"
description = "Telegram integration worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "telethon>=1.40.0,<2.0.0",
  "python-socks[asyncio]>=2.4.3,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "cryptography>=45.0.0,<46.0.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
